Fixed user area buttons going out of bounds

--- a/import.css
+++ b/import.css
@@ -730,7 +730,6 @@ html #app-mount .container-2nx-BQ.checked-25WXMf .slider-32CRPX[style*="left: 12
 .clickable-28SzVr.container-1oeRFJ:hover, .clickable-28SzVr.container-1oeRFJ:hover .muted-14PyqW {
   background-color: transparent;
 }
-.withTagAsButton-OsgQ9L, .withTagless-10ooWt { min-width: 100px !important; }
 .item-1OdjEX::before {
   display: none !important;
 }
